force-app/main/default/objects/FInCSVHeader__c/FInCSVHeader__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CheckProfile</label>
</CustomObject>