force-app/main/default/objects/FInCSVHeader__c/fields/RegionProfile__c.field-meta.xml
<CustomField>
    <fullName>RegionProfile__c</fullName>
    <defaultValue>true</defaultValue>
    <label>RegionProfile</label>
    <type>Checkbox</type>
</CustomField>