force-app/main/default/objects/FInCSVHeader__c/fields/skiptrigger__c.field-meta.xml
<CustomField>
    <fullName>skiptrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>skiptrigger</label>
    <type>Checkbox</type>
</CustomField>