force-app/main/default/objects/FInCSVHeader__c/fields/skipvalidationrule__c.field-meta.xml
<CustomField>
    <fullName>skipvalidationrule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>skipvalidationrule</label>
    <type>Checkbox</type>
</CustomField>